@@ -62,6 +62,8 @@ dpkg (1.17.11) UNRELEASED; urgency=low
   * Try to preallocate the disk size for extracted files on unpack. This
     might help in avoiding filesystem fragmentation, and possibly improve
     performance on some filesystems.
+  * Print the correct removed binary filename when building a source package
+    with dpkg-source --include-removal. Closes: #755166
 
   [ Updated programs translations ]
   * Danish (Joe Dalton). Closes: #754127
